航班查询管理项目:功能完善（2020-11-1）

--- a/web/WEB-INF/view/页面功能及流程.md
+++ b/web/WEB-INF/view/页面功能及流程.md
@@ -96,3 +96,8 @@
 * 具体功能：
     * 信息搜索出来后，每条信息最会都会有个detail按钮，点击显示当前信息的详细情况。
 * 具体实现：待实现。
+### 5、confirm或cancel按钮功能
+* 具体功能：
+    * 选中表格内的信息并点击表格左上角的confirm或cancel按钮可以更改该条航班版的状态
+* 具体实现：
+    * 点击航班信息时会给按钮生成一个schId属性并赋值，点击按钮时就可以根据对应的api更改航班状态了
